--- a/index.html
+++ b/index.html
@@ -445,32 +445,32 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p><a href="../Manipulando_pixels_em_uma_imagem/cap2.html">Manipulando pixels em uma imagem</a></p>
+<p><a href="Manipulando_pixels_em_uma_imagem/cap2.html">Manipulando pixels em uma imagem</a></p>
 </li>
 <li>
-<p><a href="../Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.html">Serialização de dados em ponto flutuante via FileStorage</a></p>
+<p><a href="Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.html">Serialização de dados em ponto flutuante via FileStorage</a></p>
 </li>
 <li>
-<p><a href="../Decomposição_de_imagens_em_planos_de_bits/cap4.html">Decomposição de imagens em planos de bits</a></p>
+<p><a href="Decomposição_de_imagens_em_planos_de_bits/cap4.html">Decomposição de imagens em planos de bits</a></p>
 </li>
 <li>
-<p><a href="../Preenchimento_de_regiões/cap5.html">Preenchimento de regiões</a></p>
+<p><a href="Preenchimento_de_regiões/cap5.html">Preenchimento de regiões</a></p>
 </li>
 <li>
-<p><a href="../Manipulação_de_histogramas/cap6.html">Manipulação de histogramas</a></p>
+<p><a href="Manipulação_de_histogramas/cap6.html">Manipulação de histogramas</a></p>
 </li>
 <li>
-<p><a href="../Filtragem_no_domínio_espacial_I/cap7.html">Filtragem no domínio espacial I</a></p>
+<p><a href="Filtragem_no_domínio_espacial_I/cap7.html">Filtragem no domínio espacial I</a></p>
 </li>
 <li>
-<p><a href="../Filtragem_no_domínio_espacial_II/cap8.html">Filtragem no domínio espacial II</a></p>
+<p><a href="Filtragem_no_domínio_espacial_II/cap8.html">Filtragem no domínio espacial II</a></p>
 </li>
 </ol>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-10-01 11:19:26 -0300
+Last updated 2023-10-01 11:21:23 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
