--- a/Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.html
+++ b/Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.html
@@ -492,17 +492,11 @@ int main(int argc, char** argv) {
 <div class="paragraph">
 <p>Saida em PNG:</p>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Imagem gerada pelo programa filestorage.</p>
-</li>
-</ol>
-</div>
 <div class="imageblock">
 <div class="content">
 <img src="senoide-256(127).png" alt="senoide-256(127)">
 </div>
+<div class="title">Figure 1. Imagem gerada pelo programa filestorage.</div>
 </div>
 <div class="paragraph">
 <p>Saida em XML (Primeira linha do primeiro período):</p>
@@ -535,7 +529,7 @@ mat: !!opencv-matrix
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-10-01 11:38:20 -0300
+Last updated 2023-10-01 11:42:21 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
