--- a/Manipulação_de_histogramas/cap6.html
+++ b/Manipulação_de_histogramas/cap6.html
@@ -552,12 +552,13 @@ int main(int argc, char** argv){
 <div class="content">
 <img src="equalized.png" alt="equalized">
 </div>
-<div class="title">Figure 2. imagens em tons de cinza com o histograma equalizado, com variação de luzes (apagada e acessa).</div>
+<div class="title">Figure 2. imagem em tons de cinza com o histograma equalizado, com variação de luzes (apagada).</div>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="equalized(2).png" alt="equalized(2)">
 </div>
+<div class="title">Figure 3. imagem em tons de cinza com o histograma equalizado, com variação de luzes (acessa).</div>
 </div>
 </div>
 </div>
@@ -662,20 +663,20 @@ int main(int argc, char** argv){
 <div class="content">
 <img src="motion.png" alt="motion">
 </div>
-<div class="title">Figure 3. Saida do programa de detecção de imagem.</div>
+<div class="title">Figure 4. Saida do programa de detecção de imagem.</div>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="Captura%20de%20tela_2023-09-28_17-48-43.png" alt="Captura de tela_2023-09-28_17-48-43">
 </div>
-<div class="title">Figure 4. Sinal de detecção de movimento.</div>
+<div class="title">Figure 5. Sinal de detecção de movimento.</div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-10-01 11:55:23 -0300
+Last updated 2023-10-01 11:57:17 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
