--- a/Filtragem_no_domínio_espacial_II/cap8.html
+++ b/Filtragem_no_domínio_espacial_II/cap8.html
@@ -562,13 +562,13 @@ int main(int argvc, char** argv){
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="blend2.png" alt="blend2">
+<img src="blend2.jpg" alt="blend2">
 </div>
 <div class="title">Figure 1. Imagem original.</div>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="tiltshift.png" alt="tiltshift">
+<img src="tiltshift.jpg" alt="tiltshift">
 </div>
 <div class="title">Figure 2. Imagem com efeito tilt-shift.</div>
 </div>
@@ -665,7 +665,7 @@ int main(int argvc, char** argv){
 </div>
 <div class="videoblock">
 <div class="content">
-<iframe src="https://www.youtube.com/embed/ABzDOSQkhTM?si=77VAVmcXh-nv3GwT?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/ABzDOSQkhTM?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 <div class="paragraph">
@@ -681,7 +681,7 @@ int main(int argvc, char** argv){
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-10-01 12:11:05 -0300
+Last updated 2023-10-01 12:13:35 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
