--- a/Filtragem_no_domínio_espacial_II/cap8.html
+++ b/Filtragem_no_domínio_espacial_II/cap8.html
@@ -584,7 +584,7 @@ int main(int argvc, char** argv){
 <h2 id="_problema_2"><strong>Problema 2:</strong></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>O problema consiste em modificar o programa tiltshift para que ele aplique o mesmo efeito em vídeos.</p>
+<p>O problema consiste em modificar o programa tilt-shift para que ele aplique o mesmo efeito em vídeos.</p>
 </div>
 <div class="paragraph">
 <p>Programa tiltshiftvideo.cpp:</p>
@@ -665,15 +665,15 @@ int main(int argvc, char** argv){
 </div>
 <div class="videoblock">
 <div class="content">
-<iframe src="https://www.youtube.com/embed/ABzDOSQkhTM?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="480" src="https://www.youtube.com/embed/ABzDOSQkhTM?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 <div class="paragraph">
-<p>Link do vídeo com o efeito tiltshift:</p>
+<p>Link do vídeo com o efeito tilt-shift:</p>
 </div>
 <div class="videoblock">
 <div class="content">
-<iframe src="https://www.youtube.com/embed/OmAQV7e5-Jw?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="480" src="https://www.youtube.com/embed/OmAQV7e5-Jw?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
@@ -681,7 +681,7 @@ int main(int argvc, char** argv){
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-10-01 12:13:35 -0300
+Last updated 2023-10-01 12:16:37 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
