segunda avaliação revisão

--- a/Filtragem_de_forma_com_morfologia_matemática/cap13.html
+++ b/Filtragem_de_forma_com_morfologia_matemática/cap13.html
@@ -488,7 +488,7 @@ int main(int argc, char** argv) {
 </div>
 </div>
 <div class="paragraph">
-<p>A técnica morfologica utilizada para fechar os espaços entre os digitos foi o fechamento da imagem.</p>
+<p>A técnica morfologica utilizada para fechar os espaços entre os digitos foi o fechamento da imagem. Onde a image teve os bits invertidos, para inverter a cor da imagem, cria o elemento estruturante, que é uma linha na vertical, realiza o fechamento com esse elemento e por fim reverte os bits da imagem.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -508,7 +508,7 @@ int main(int argc, char** argv) {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-12-02 17:43:11 -0300
+Last updated 2023-12-02 18:00:04 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
