--- a/index.html
+++ b/index.html
@@ -465,12 +465,27 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="Filtragem_no_domínio_espacial_II/cap8.html">Filtragem no domínio espacial II</a></p>
 </li>
+<li>
+<p><a href="Transformada_Discreta_de_Fourier/cap9.html">Transformada Discreta de Fourier</a></p>
+</li>
+<li>
+<p><a href="Filtragem_no_Domínio_da_Frequência/cap10.html">Filtragem no Domínio da Frequência</a></p>
+</li>
+<li>
+<p><a href="Detecção_de_bordas_com_o_algoritmo_de_Canny/cap11.html">Detecção de bordas com o algoritmo de Canny</a></p>
+</li>
+<li>
+<p><a href="Quantização_vetorial_com_k-means/cap12.html">Quantização vetorial com k-means</a></p>
+</li>
+<li>
+<p><a href="Filtragem_de_forma_com_morfologia_matemática/cap13.html">Filtragem de forma com morfologia matemática</a></p>
+</li>
 </ol>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-10-01 11:25:12 -0300
+Last updated 2023-12-02 17:51:34 -0300
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
